Showing Appointments and Confirmation of Appointment

--- a/AppointmentScheduler/appsettings.json
+++ b/AppointmentScheduler/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.; Database=appScheduler; TrustServerCertificate=true; Trusted_Connection=True; MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=.; Database=appScheduler; TrustServerCertificate=true; Trusted_Connection=True; MultipleActiveResultSets=True",
+    "ProductionDB": "Data Source=SQL5111.site4now.net;Initial Catalog=db_a9f2c3_munibjmmdb;User Id=db_a9f2c3_munibjmmdb_admin;Password=Peshawar1@;"
 
   }
 }
